--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -19,3 +19,16 @@ jobs:
           cd ..
           cd service_gateway
           mvn install
+  
+  tests:
+    runs-on: ubuntu-latest
+      run: cd ..
+
+  merge:
+    needs: [build, tests]
+    run: |
+      git checkout ${GITHUB_REF#refs/heads/}
+      git rebase origin/master
+      git branch master
+      git push origin master:master
+      git push origin :${GITHUB_REF#refs/heads/}  
