--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -22,8 +22,9 @@ jobs:
   
   tests:
     runs-on: ubuntu-latest
-    - name: Testing
-      run: cd ..
+    steps:
+      - name: Testing
+        run: cd ..
 
   merge:
     needs: [build, tests]
