--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -22,15 +22,18 @@ jobs:
   
   tests:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Testing
         run: cd ..
 
   merge:
     needs: [build, tests]
-    run: |
-      git checkout ${GITHUB_REF#refs/heads/}
-      git rebase origin/master
-      git branch master
-      git push origin master:master
-      git push origin :${GITHUB_REF#refs/heads/}  
+
+    steps:
+      run: |
+        git checkout ${GITHUB_REF#refs/heads/}
+        git rebase origin/master
+        git branch master
+        git push origin master:master
+        git push origin :${GITHUB_REF#refs/heads/}  
