--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -22,7 +22,7 @@ jobs:
   
   tests:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Testing
         run: cd ..
@@ -31,9 +31,9 @@ jobs:
     needs: [build, tests]
 
     steps:
-      run: |
-        git checkout ${GITHUB_REF#refs/heads/}
-        git rebase origin/master
-        git branch master
-        git push origin master:master
-        git push origin :${GITHUB_REF#refs/heads/}  
+      - run: |
+          git checkout ${GITHUB_REF#refs/heads/}
+          git rebase origin/master
+          git branch master
+          git push origin master:master
+          git push origin :${GITHUB_REF#refs/heads/}  
