--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -24,9 +24,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Testing
-        run: cd .
-
+        run: mvn test -DskipTests=false -Dgroups=fast
 
   merge:
     runs-on: ubuntu-latest
