--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,11 +16,9 @@ jobs:
         run: |
           cd service_adify
           mvn install
-          mvn test -DskipTests=false -Dgroups=fast
           cd ..
           cd service_gateway
           mvn install
-          mvn test -DskipTests=false -Dgroups=fast
   
   tests:
     runs-on: ubuntu-latest
@@ -30,7 +28,10 @@ jobs:
         with:
           fetch-depth: 0
       - name: Testing
-        run: cd .
+        run: |
+          cd service_adify
+          mvn test -DskipTests=false -Dgroups=fast
+          cd ..
 
   merge:
     runs-on: ubuntu-latest
