--- a/.github/workflows/automatic-deployment.yml
+++ b/.github/workflows/automatic-deployment.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.5.7 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "cloudamqp-cubic-08783" #Must be unique in Heroku
+          heroku_app_name: "fathomless-dusk-05485" #Must be unique in Heroku
           heroku_email: "casper@majgaard.dk"
