--- a/.github/workflows/automatic-deployment.yml
+++ b/.github/workflows/automatic-deployment.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fathomless-dusk-05485" #Must be unique in Heroku
-          heroku_email: "casper@majgaard.dk"
+          heroku_email: "caspn18@student.sdu.dk"
